--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,37 @@
 @import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@theme {
+  --color-*: initial;
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-nunito: var(--font-nunito);
-  --font-rubik: var(--font-rubik);
-}
+  --color-white: #FFFFFF;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-gray-100: #E4EEDD;
+  --color-gray-200: #616161;
+  --color-gray-300: #4F4F4F;
+  --color-gray-400: #3A3A3A;
+  --color-gray-500: #292929;
+
+
+  --color-green-400: #54B689;
+  --color-green-600: #43956D;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: var(--font-nunito), sans-serif;
+}
+
+@keyframes spin-back {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.animate-spin-back {
+  animation: spin-back 4s ease-in-out infinite;
 }
